Thesis pagg added

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <h2 class="name">  #projects and case studies</h2>
         <div class="center">
-            <p>Here you can find a list of the major case studies and project that i'm most proud of: </p>
+            <p>Here you can find a list of the major case studies and projects that i'm most proud of: </p>
         </div>
 
         <div class="cards">
@@ -86,8 +86,14 @@
                 <div class="card-content">
                     <h3>1 - Thesis on VR interface</h3>
                     <p> 
-                        Thesis 
+                        <img style="  display: block;
+                    margin-left: auto;
+                    margin-right: auto;
+                    height: auto;
+                    width: auto;" src="/images/gameplay.png" alt="Thesis">
                     </p> 
+
+                    <a href="/thesis.html"> <button class="button">See more!</button></a>
                 </div>
                 
             </div>
@@ -97,6 +103,7 @@
                     <p> 
                         Thesis VR street crossing
                     </p> 
+                    <a href="/thesis.html"> <button class="button">See more!</button></a>
                 </div>
             </div>
             <div class="card">
@@ -105,14 +112,20 @@
                     <p> 
                         garden 
                     </p> 
+                    <a href="/thesis.html"> <button class="button">See more!</button></a>
                 </div>
             </div>
             <div class="card"> 
                 <div class="card-content">
                     <h3>4 - development of an application</h3>
                     <p> 
-                        dressUp! 
+                        <img style="  display: block;
+                    margin-left: auto;
+                    margin-right: auto;
+                    max-width: 50%;
+                    " src="/images/dressUp.png" alt="APP"> 
                     </p> 
+                    <a href="/thesis.html"> <button class="button">See more!</button></a>
                 </div>
             </div>
         </div>
